[package]
name = "libnatpmp"
version = "0.1.3"
authors = ["fengyingcai <fengyc.work@gmail.com>"]
description = "A NAT-PMP (IETF RFC 6886) library in rust."
license = "MIT"
keywords = ["natpmp", "rfc6886", "nat", "portmapping"]
repository = "https://github.com/fengyc/libnatpmp"
homepage = "https://github.com/fengyc/libnatpmp"
documentation = "https://docs.rs/libnatpmp/"
readme = "README.md"

[dependencies]
natpmp = "0.1"      # compile native c